--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /*
 !.gitignore
 !README.md
+!package.json
+!package-lock.json
+!database.sql
+!webpack.mix.js
 
 
 !wp-content
@@ -8,3 +12,4 @@ wp-content/*
 !wp-content/themes
 wp-content/themes/*
 !wp-content/themes/dw
+wp-content/dw/public
